// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tw matches snapshot with class component 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-400"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`tw matches snapshot with function component 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-400"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`tw matches snapshot with intrinsic element 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-400"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`tw matches snapshot with two dynamic properties 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-500 p-10"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`tw matches snapshot with two properties 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-500 p-10"
  >
    test
  </div>
</DocumentFragment>
`;